--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section class="section-1">
-        <div class="flex-container">
+    <div class="section-1">
+        <div class="header">
             <div class="logo">Header Logo</div>
-            <a class="link">header link one</a>
-            <a class="link">header link two</a>
-            <a class="link">header link three</a>
+            <ul class="header-links">
+                <li><a>header link one</a></li>
+                <li><a>header link two</a></li>
+                <li><a>header link three</a></li>
+            </ul>
         </div>
-    </section>
+    </div>
 
 </body>
 </html>
