Finish styling section 1 content and html
Section 1 is now complete, move onto section 2

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
                 <li><a>header link three</a></li>
             </ul>
         </div>
+        <div class="content">
+            <div class="left">
+                <div class="text">
+                    <div class="title"><a>This website is awesome</a></div>
+                    <a class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</a>
+                </div>
+                <button>Sign Up</button>
+            </div>
+            <div class="right">
+                <div>
+                    <a>this is a placeholder for an image</a>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
