Fix up section 1 sizing and layout

--- a/index.html
+++ b/index.html
@@ -25,9 +25,32 @@
                 <button>Sign Up</button>
             </div>
             <div class="right">
-                <div>
+                <div class="placeholder">
                     <a>this is a placeholder for an image</a>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="section-2">
+        <div class="title">
+            <a>Some random information.</a>
+        </div>
+        <div class="content">
+            <div class="item">
+                <div class="image"></div>
+                <div class="text"><a>this is some subtext under an illustration or image</a></div>
+            </div>
+            <div class="item">
+                <div class="image"></div>
+                <div class="text"><a>this is some subtext under an illustration or image</a></div>
+            </div>
+            <div class="item">
+                <div class="image"></div>
+                <div class="text"><a>this is some subtext under an illustration or image</a></div>
+            </div>
+            <div class="item">
+                <div class="image"></div>
+                <div class="text"><a>this is some subtext under an illustration or image</a></div>
             </div>
         </div>
     </div>
