--- a/index.html
+++ b/index.html
@@ -53,6 +53,23 @@
                 <div class="text"><a>this is some subtext under an illustration or image</a></div>
             </div>
         </div>
+        <div class="section-3">
+            <div class="content">
+                <div class="quote"><a><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></a></div>
+                <div class="author"><a>-Thor, God of Thunder</a></div>
+            </div>
+        </div>
+        <div class="section-4">
+            <div class="content">
+                <div class="left">
+                    <div class="title">Call to action! It's time!</div>
+                    <div class="subtext">Sign up for our product by clicking the button right over there!</div>
+                </div>
+                <div class="right">
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
