--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <div class="footer-content">
+                Copyright © The Odin Project 2021
+            </div>
+        </div>
     </div>
 
 </body>
